# NDK_Exception_In_Library

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/viliussutkus89/exceptioner/: ExceptionInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  catcher.cpp  native-lib.cpp  thrower-lib.cpp  thrower.cpp  thrower.h
app/src/main/java/com/viliussutkus89/exceptioner/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
ndk-build-cant-repro/: README.md  test.sh
ndk-build-cant-repro/jni/: Android.mk  Application.mk  catcher.cpp  runnerapp.cpp  thrower.cpp  thrower.h
